Changed JVM flags values according Java 7